# hippius-libp2p

./: .gitignore  Caddyfile.example  Cargo.toml  FRONTEND.md  README.md  RELEASE.md  SECURITY.md  bootnode.key  bootnode_key.json  goal.md  index.html  setup.md  yjs-acl.js  yjs-example-encrypted.html  yjs-example-new.html  yjs-example-rooms.html  yjs-example.html
.github/workflows/: release.yml
config/: turn_config.json
data/node/: peer_id.key
docs/: TURN_SERVER_SETUP.md
src/: main.rs  metrics_server.rs  monitoring.rs  signaling.rs  web_server.rs
web/: index.html  style.css  turn.js  webrtc.js
