[package]
name = "hippius-libp2p"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
futures = "0.3.31"
libp2p = { version = "0.54.1", features = ["noise", "ping", "tcp", "websocket", "yamux"] }
libp2p-autonat = "0.13.0"
libp2p-core = "0.42.0"
libp2p-identity = "0.2.10"
libp2p-kad = "0.46.2"
libp2p-mdns = "0.46.0"
libp2p-ping = "0.45.0"
libp2p-plaintext = "0.42.0"
libp2p-rendezvous = "0.15.0"
libp2p-swarm = "0.45.1"
libp2p-swarm-derive = { version = "0.35.0" }
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
