[package]
name = "hippius-libp2p"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures = "0.3"
libp2p = { version = "0.52", features = [
    "identify",
    "macros",
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
    "mdns",
    "gossipsub",
    "quic",
    "kad",
    "dns",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4"] }
base64 = "0.21"
futures-util = "0.3"
once_cell = "1.19"
clap = { version = "4.4", features = ["derive"] }
