[package]
name = "hippius-libp2p"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
either = "1.9"
futures = "0.3"
libp2p = { version = "0.53", features = [
    "identify",
    "macros",
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
    "mdns",
    "gossipsub",
    "kad",
    "dns",
    "websocket",
] }
futures-util = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
warp = "0.3"
rand = "0.8"
base64 = "0.21"
once_cell = "1.19"
clap = { version = "4.4", features = ["derive"] }
libp2p-webrtc = { version = "0.8.0-alpha", features = ["tokio"] }
uuid = { version = "1.6", features = ["v4"] }
bs58 = "0.5.0"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
sysinfo = "0.29"
axum = "0.7.9"
# Remove explicit libp2p-core dependency as it's included in libp2p
